get & delete items from db

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
-<body>
+<body onload="getAllTasks()">
     <h1>To Do List</h1>
     <h3>
         Add your tasks for the week and keep track of them here.
