keep cursor on input box after each submission

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,12 @@
         <form class="form">
           <div class="input-group">
             <label for="username">Enter task here...</label>
-            <input type="text" id="taskInput" placeholder="Do Laundry" />
+            <input
+              type="text"
+              id="taskInput"
+              placeholder="Do Laundry"
+              autofocus="{true}"
+            />
           </div>
           <br />
           <button class="cssbuttons-io-button" onclick="addTask()">
